--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hlketov0
+        S:lastStarted=hln8oxvt
     }
 
 }
@@ -197,7 +197,7 @@ me {
         I:automationMinTickRate=5
         D:base.wireless.range=32.0
         I:craftingMinTickRate=0
-        S:defaultUnits=UE
+        S:defaultUnits=EU
         B:enableShiftInCondenser=false
         I:max.wireless.extenderBonus=2
         I:max.wireless.extenders=16
@@ -207,9 +207,9 @@ me {
         B:requirePower=true
         B:sharePowerLPRS485=true
         I:storageBusMinTickRate=5
-        S:terminalAutoSearch=NEIStandard
+        S:terminalAutoSearch=NEIAutoSearch
         B:terminalSearchToolTips=true
-        S:terminalSortBy=Name
+        S:terminalSortBy=Priority
         S:terminalSortDirection=ASC
         I:terminalUpdateMinTickRate=0
         B:terminalUseLargeFont=false
