--- a/config/FinderCompass.cfg
+++ b/config/FinderCompass.cfg
@@ -38,13 +38,13 @@ Setting:Mob Spawn/Chest
 54:184:138:0:60:60:1:100:1
 //
 //
-Setting:Diamond/Lapis/Redstone/Emerald
+Setting:Diamond/Lapis/Redstone/Emerald/Quartz
 //
 NoDefaultNeedle
 NoEnderEyeNeedle
 //
 // this is "Diamond" = block id 56, with a needle color of {51,255,204}, it scans 15 blocks horizontally, 1 vertically, from 1-16 height, every second
-56:51:255:204:15:1:1:16:0
+56:51:255:204:15:1:1:32:0
 //
 // - lapis lazuli
 21:55:70:220:15:1:1:100:0
@@ -53,7 +53,10 @@ NoEnderEyeNeedle
 73:255:125:155:15:1:1:100:0
 //
 // - emerald ore
-129:26:255:26:7:1:4:31:0 
+129:26:255:26:7:1:4:31:0
+//
+// - Quartz ore
+3976:229:229:229:15:1:1:32:0
 //
 //
 Setting:Gold/Iron/Coal
