--- a/config/IC2.cfg
+++ b/config/IC2.cfg
@@ -42,7 +42,9 @@ block {
     I:blockScaffold=4024
     I:blockWall=4013
     I:blockfluidCF=4038
+    I:blockfluidCf=4038
     I:blockfluidUUMater=4037
+    I:blockfluidUuMatter=4037
 }
 
 
