--- a/config/buildcraft/main.conf
+++ b/config/buildcraft/main.conf
@@ -77,8 +77,15 @@ general {
 
     # the lifespan in ticks of items dropped on the ground by pipes and machines, vanilla = 6000, default = 1200
     I:itemLifespan=1200
+
+    # cost multiplier for mining operations, range (1.0 - 10.0)
+    # high values may render engines incapable of powering machines directly
     D:mining.cost.multipler=1.0
+
+    # how far below the machine can mining machines dig, range (2 - 256), default 256
     I:mining.depth=256
+
+    # disables the recipes for automated mining machines
     B:mining.enabled=true
 
     # set to false if BuildCraft should not generate custom blocks (e.g. oil)
@@ -97,10 +104,16 @@ general {
     # when reaching this amount of objects in a pipes, items will be automatically grouped
     I:pipes.groupItemsTrigger=32
     S:power.framework=buildcraft.energy.PneumaticPowerFramework
+
+    # Allows admins to whitelist or blacklist pumping of specific fluids in specific dimensions.
+    # Eg. "-/-1/Lava" will disable lava in the nether. "-/*/Lava" will disable lava in any dimension. "+/0/*" will enable any fluid in the overworld.
+    # Entries are comma seperated, banned fluids have precedence over allowed ones.Default is "+/*/*,+/-1/Lava" - the second redundant entry ("+/-1/Lava") is there to show the format.
     S:pumping.controlList=+/*/*,+/-1/lava
+
+    # Quarry cannot be picked back up after placement
     B:quarry.one.time.use=false
     B:trackNetworkUsage=false
-    S:version=4.0.1-66-g47d504d
+    S:version=4.0.1-70-g56d46de
 }
 
 
