--- a/config/NEI.cfg
+++ b/config/NEI.cfg
@@ -3,6 +3,8 @@
 #Deleting any element will restore it to it's default value
 
 checkUpdates=true
+mistaqur.showHiddenForestryItems=false
+mistaqur.showUsageInOreDictionary=false
 options.edge-align buttons=false
 
 #Change these options if you have a different mod installed on the server that handles the commands differently, Eg. Bukkit Essentials
@@ -32,6 +34,8 @@ inventory
 
 keys
 {
+	neiplugins.recipeList=38
+	
 	gui
 	{
 		back=14
@@ -58,6 +62,21 @@ keys
 		noon=0
 		rain=0
 	}
+}
+
+neiplugins
+{
+	developer.showNamesInFluidRegistry=false
+	developer.showOreDictionaryNames=false
+	developer.showUsageInOreDictionary=true
+	fueltooltip.enableContextTooltip=true
+	fueltooltip.showTooltipForItemStack=true
+	fueltooltip.showTooltipForLiquidContainer=true
+	fueltooltip.showTooltipForLiquidItem=true
+	fueltooltip.showTooltipInFluidRegistry=true
+	showForestryPowerInfoTooltip=true
+	update.checkAllUpdates=false
+	update.checkUpdate=false
 }
 
 world
