--- a/config/Dark/EnabledBlocks.cfg
+++ b/config/Dark/EnabledBlocks.cfg
@@ -16,6 +16,7 @@ enabledlist {
     B:Enable_tile.GlowGlass=true
     B:Enable_tile.MechanicalGenerator=true
     B:Enable_tile.MechanicalRod=true
+    B:Enable_tile.OreProcessor=true
     B:Enable_tile.ReleaseValve=true
     B:Enable_tile.RestrictedPipe=true
     B:Enable_tile.StainedGlass=true
