--- a/config/buildcraft/main.conf
+++ b/config/buildcraft/main.conf
@@ -113,7 +113,7 @@ general {
     # Quarry cannot be picked back up after placement
     B:quarry.one.time.use=false
     B:trackNetworkUsage=false
-    S:version=4.0.1-70-g56d46de
+    S:version=4.0.1-75-gcde6791
 }
 
 
