ID Conflict: 'TinkersWorkshop.txt'
ID Conflict: **'TinkersWorkshop.txt'**. Change I:"Full Guard"=14047 to
14001, I:Bowstring=14048 to 14002, I:Arrowhead=14049 to 14003,
I:Fletching=14050 to 14004, I:Pickaxe=14051 to 14005, I:Shovel=14052 to
14006, I:Axe=14053 to 14007, I:"Hammer Head"=14046 to 14008,
I:"Excavator Head"=14045 to 14009, I:"Large Plate"=14044 to 14010.

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hlodcxt2
+        S:lastStarted=hlof2azp
     }
 
 }
