Mod and Config Update
Damage Indicators v2.9.0.5
Change Log:
2.9.0.5:
Fixed skinless skin.
Added 'enemy' identification. If a mob or player attacks the player,
their icon will temporarily be red.
If a tamable animal targets you, or any of your pets, their icon will
change red.
Donators now recieve a Donators cape.
Donator particles changed so they are less likely to appear greenish.
2.9.0.4:
Fixed the scrollbar in the skin gui from not working correctly.
2.9.0.3:
Fixed mouseovers not functioning correctly.
GUI crashes and rendering issues fixed.
Damage indicators moved back to a tick handler off of the render screen
event for tukmc compatibility.
Tweaks to the raytracer.
Some methods rewritten and restructured for future optional server
plugin support.

Applied Energetic rv13.c (9/18/2013)
Change Log
Version rv13.c - Released Wednesday, September 18th 2013 2.41PM -05:00
Added option to disable villager trading.
Fixed particle rendering glitch with TPlanes and Quantum network
bridges.
Performance improvements in creative cell.
Fixed bug with storage bus and "Configure by contents"
Creative Cell now "stores" the items it is partitioned too as well.
Fixed an issue with storage buses reporting possible destinations when
formated.
Moved a method to subclasses to fix a re-obfuscation bug ( Fix for
MyTown compat )
1.6.2 Only - AE now registers its full cubes as sealed in Galacticraft.
Transition Planes can no longer break air blocks.
Added a Transition Plane blacklist to the config.
New API IOrientableTile
Better Storage Proxy now looks for lowercase modid instead of with
capitals.
Added a new ITileCable to lt other mods create cables that blend with
with AE's internal cables.
1.6.2 Only - Fixed issue with IC2 LF machines.

Basic Components v1.0.0.14
#14
Update BasicComponents.java

Universal Electricity v171
#171
Fixed #128 - Null Point Network Exception

Extra Cells AE Add-On Fluid Storage v1.4.3C
Changelog
ExtraCells 1.4.3c:
-Fixed the "Fluids are being voided by import

--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hlof2azp
+        S:lastStarted=hlty94u0
     }
 
 }
@@ -207,9 +207,9 @@ me {
         B:requirePower=true
         B:sharePowerLPRS485=true
         I:storageBusMinTickRate=5
-        S:terminalAutoSearch=NEIAutoSearch
+        S:terminalAutoSearch=Autosearch
         B:terminalSearchToolTips=true
-        S:terminalSortBy=Priority
+        S:terminalSortBy=ItemID
         S:terminalSortDirection=ASC
         I:terminalUpdateMinTickRate=0
         B:terminalUseLargeFont=false
