--- a/config/DamageIndicatorsMod.cfg
+++ b/config/DamageIndicatorsMod.cfg
@@ -111,7 +111,7 @@ portrait {
 
     appearance {
         # Change the size of the portrait preview.
-        D:Gui_Scale=0.7599999904632568
+        D:Gui_Scale=0.76
 
         # When true, mobs in the portrait are locked in place. When false, they turn the same same as they are turning in the world.
         B:Lock_Mob_Position=true
