--- a/config/cfm.cfg
+++ b/config/cfm.cfg
@@ -5,15 +5,18 @@
 ####################
 
 block {
+    I:BlockAnimation=540
     I:BlockBedsideCabinet=502
     I:BlockBirdBath=525
     I:BlockBlinds=520
     I:BlockBlindsClosed=521
     I:BlockCabinet=513
+    I:BlockCeilingLight=537
     I:BlockChairStone=505
     I:BlockChairWood=510
     I:BlockCoffeTableStone=503
     I:BlockCoffeeTableWood=508
+    I:BlockComputer=531
     I:BlockCouchBlack=518
     I:BlockCouchBrown=516
     I:BlockCouchGreen=515
@@ -22,6 +25,8 @@ block {
     I:BlockCurtains=522
     I:BlockCurtainsClosed=523
     I:BlockDoorBell=535
+    I:BlockElectricFence=533
+    I:BlockFireAlarm=534
     I:BlockFreezer=511
     I:BlockFridge=512
     I:BlockHedge=524
@@ -30,11 +35,16 @@ block {
     I:BlockMailBox=529
     I:BlockOven=501
     I:BlockOvenOverhead=500
+    I:BlockPrinter=532
+    I:BlockStereo=539
     I:BlockStonePath=526
+    I:BlockTV=530
     I:BlockTableStone=504
     I:BlockTableWood=509
     I:BlockTap=528
     I:BlockWhiteFence=527
+    I:lightBulbWhiteGlass=544
+    I:yellowGlowBlock=543
 }
 
 
@@ -47,10 +57,12 @@ item {
     I:ItemBirdBath=23031
     I:ItemBlinds=23011
     I:ItemCabinet=23003
+    I:ItemCeilingLight=23052
     I:ItemChairStone=23020
     I:ItemChairWood=23002
     I:ItemCoffeeTableStone=23022
     I:ItemCoffeeTableWood=23004
+    I:ItemComputer=23045
     I:ItemCookedFlesh=23026
     I:ItemCoolPack=23019
     I:ItemCouchBlack=23010
@@ -60,8 +72,10 @@ item {
     I:ItemCouchWhite=23006
     I:ItemCurtains=23012
     I:ItemDoorBell=23049
+    I:ItemElectricFence=23051
     I:ItemEnvelope=23036
     I:ItemEnvelopeSigned=23037
+    I:ItemFireAlarm=23048
     I:ItemFlesh=23025
     I:ItemFridge=23005
     I:ItemHammer=23043
@@ -69,17 +83,34 @@ item {
     I:ItemHedgeBirch=23029
     I:ItemHedgeJungle=23030
     I:ItemHedgeSpruce=23028
+    I:ItemInkCartridge=23047
     I:ItemLamp=23018
     I:ItemMailBox=23035
     I:ItemOven=23023
     I:ItemOvenOverhead=23024
     I:ItemPackage=23039
     I:ItemPackageSigned=23040
+    I:ItemPrinter=23046
+    I:ItemStereo=23050
     I:ItemStonePath=23032
+    I:ItemTV=23044
     I:ItemTableStone=23021
     I:ItemTableWood=23001
     I:ItemTap=23034
     I:ItemWhiteFence=23033
+}
+
+
+####################
+# minebay
+####################
+
+minebay {
+    I:currency=388
+    I:ids <
+     >
+    I:price <
+     >
 }
 
 
