--- a/config/ProjectRed.cfg
+++ b/config/ProjectRed.cfg
@@ -6,11 +6,14 @@
 
 block {
     I:block_gateID=2147
+    I:block_lampID=2132
     I:block_lanternID=2130
     I:block_lightingID=2128
     I:block_machinesID=2129
     I:block_microID=2145
     I:block_oresID=2130
+    I:block_redconductiveliquidID=2134
+    I:block_redstoneliquidID=2133
     I:block_stonesID=2131
     I:block_wireID=2146
 }
@@ -98,8 +101,10 @@ modules {
 ####################
 
 "multipart item ids" {
+    I:"Cage Lamp Part ID"=3610
     I:"Gate Part ID"=3602
     I:"Illuminated Button Part ID"=3609
+    I:"Inverted Cage Lamp Part ID"=3611
     I:"Inverted Lamp Part ID"=3608
     I:"Inverted Lantern Part ID"=3606
     I:"Jacketed Wire Part ID"=3604
