--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -47,7 +47,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hlty94u0
+        S:lastStarted=hlu0a0u6
     }
 
 }
